# sadb0y-amy-esp32-s3

./: .gitignore  CMakeLists.txt  README.md  gpio.md
.github-copilot/: .gitignore
components/: my_buttons.c
components/amy/: CMakeLists.txt
components/amy/src/: amy.h  amy_midi.c  i2s.c  sequencer.c  sequencer.h
components/display/: CMakeLists.txt  display.c  display.h
components/my_buttons/: CMakeLists.txt  my_buttons.c
components/my_buttons/include/: my_buttons.h
components/priv_i2c_u8g2/: CMakeLists.txt  Kconfig  README.md  priv_i2c_u8g2.c  priv_i2c_u8g2.h  priv_u8g2_seq.c  priv_u8g2_seq.h
components/rotary_encoder/: CMakeLists.txt  README.md  espressif_example_rotary_encoder.txt  rotary_encoder.c  rotary_encoder.h
components/sequencer_ui/: CMakeLists.txt  INSTRUCTIONS.md  README.md  sequencer_core.c  sequencer_ui.c
components/sequencer_ui/include/: sequencer_core.h  sequencer_ui.h
components/u8g2/: .component_hash
components/u8g2/csrc/: u8g2_d_setup.c  u8g2_setup.c
components/usb_audio/: CMakeLists.txt  README.md  audio,bak  usb_audio.c  usb_audioold
components/usb_audio/include/: usb_audio.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
